--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-4-data-table": "^0.4.6",
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.4",
     "firebase-tools": "^8.4.3",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
